1997-10-24  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* main.c: (main): moved version tail text variable version_tail;
	adapted to example in GNU standards 97/07/4.
	(deurl): fixed double increment of s in single statement.

	* fn_basic.c (fn_lcd): don't get cwd if rc_inrc.

1997-10-23  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* fn_basic.c (fn_set): handle enum options.

	* mkoptab-h.m4, mkoptab-c.m4, mkoptexi.m4: new option type enum.

	* directory.c (dir_sort): new function.
	(sort_unsorted, sort_name, sort_date, sort_name_r, sort_date_r):
	new function.
	(opt_set_sort): new function.

	* readdir.c (read_dir): init new members pos and sorted.

	* directory.h: new member pos in struct direntry; new member sort
	in struct directory.

	* readrc.c (readrc): treat lines beginning with `#' as comments.

	* options.op: (sort) new option.

1997-10-21  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* readdir.c (parse_unix): parse modification time.
	(parse_time): new function.
	
	* directory.h: new member mtime in struct direntry.

	* fn_select.c (aux_download): ftp_close(fout), fclose(fin) -- not
	the other way around.
	(aux_upload): new function.
	(fn_put): new function.

	* ftp.c (ftp_stor): new function.

1997-10-17  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* ftp.c (ftp_close): return if not connected
	(ftp_resp): return -1 if not connected

	* sockets.c (sopen): write error in message area when display is
	active.

	* display.c: new variable `disp_active'.

1997-10-14  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* directory.c (get_dir): reuse cache entry only if ftp_list
	succeeded.

1997-10-08  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* main.c (main): --version and --help: conform to GNU standards.

	* version.c (version): conform to GNU standards.

	* main.c (get_annon_passwd): Handle domainname ``(none)'',
	check for beginning dot, existing user, dot in hostname. 

	* ftp.c (ftp_login): Set status.remote.path to NULL after freeing.
