@@ -103,11 +103,10 @@ documents version @value{VERSION}.
 @chapter Introduction
 @cindex Introduction
 
-@sc{cftp} is used to transfer files from a remote computer to your local
-computer via the FTP protocol.  (Uploading files to the remote computer
-is currently not supported.)  It's advantages over most standard
-ftp-clients is its fullscreen representation of the remote directory so
-you can easily choose what to get or where to go.
+@sc{cftp} is used to transfer files from one computer to another via
+the FTP protocol.  It's advantages over most standard ftp clients is its
+fullscreen representation of the remote directory, providing a compact
+overview of the remote server's contents.
 
 
 @c ****************************************************************
